# TikTok-Api

./: .gitignore  pyproject.toml  setup-venv.ps1  setup-venv.sh
.devcontainer/: devcontainer.json
Scraper/: README.md  extract_ms_token.py  tiktok_scraper.py  tiktok_scraper_mock.py
