[project]
name = "tiktok-api"
version = "7.2.1"
description = "The Unofficial TikTok API Wrapper in Python 3"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0,<3.0",
    "playwright>=1.36.0,<2.0",
    "httpx>=0.27.0,<1.0",
    "proxyproviders>=0.2.1,<0.3.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


